cookbooks/olympus/ethereum/hardhat/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "zeus-hardhat"
  labels:
    app.kubernetes.io/instance: "zeus-hardhat"
    app.kubernetes.io/name: "zeus-hardhat"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "zeus-hardhat"
      app.kubernetes.io/instance: "zeus-hardhat"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "zeus-hardhat"
        app.kubernetes.io/instance: "zeus-hardhat"
    spec:
      containers:
        - name: hercules
          image: "zeusfyi/hercules:latest"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/hercules.sh" ]
          volumeMounts:
            - name: cm-hardhat
              mountPath: "/scripts"
          ports:
            - name: hercules
              containerPort: 9003
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 120
            tcpSocket:
              port: hercules
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: hercules
        - name: zeus-hardhat
          image: registry.digitalocean.com/zeus-fyi/hardhat:latest
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          volumeMounts:
            - name: cm-hardhat
              mountPath: "/scripts"
          ports:
            - name: http-rpc
              containerPort: 8545
              protocol: TCP
          resources:
            {}
      volumes:
      - name: cm-hardhat
        configMap:
          name: cm-hardhat
          defaultMode: 0744
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
