cookbooks/olympus/ethereum/hardhat/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "zeus-hardhat"
  labels:
    app.kubernetes.io/instance: "zeus-hardhat"
    app.kubernetes.io/name: "zeus-hardhat"
    app.kubernetes.io/managed-by: "zeus"
spec:
  type: ClusterIP
  ports:
    - port: 9003
      targetPort: athena
      protocol: TCP
      name: athena
    - port: 8545
      targetPort: http-rpc
      protocol: TCP
      name: http-rpc
  selector:
    app.kubernetes.io/instance: "zeus-hardhat"
    app.kubernetes.io/name: "zeus-hardhat"
